--- a/src/components/CartEmpty/CartEmpty.module.scss
+++ b/src/components/CartEmpty/CartEmpty.module.scss
@@ -1,7 +1,9 @@
 .root {
-  margin: 70px auto;
-  width: 620px;
+  margin: 0px auto;
+  max-width: 620px;
   text-align: center;
+  margin-top: 70px;
+  padding: 0px 15px;
 
   h2 {
     font-size: 36px;
@@ -28,5 +30,21 @@
     margin: 0 auto;
     font-weight: 600;
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .root {
+    h2 {
+      font-size: 32px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+    img {
+      width: 200px;
+    }
   }
 }
